fin des layouts et du routage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Simple App du Tutoriel Ruby on Rails | <%=@titre %></title>
@@ -9,5 +8,7 @@
       Ceci est la page d'accueil de l'Application Exemple du
       <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>.
     </p>
+<%= link_to "S'inscrire !", signup_path, :class => "signup_button round" %>
+
   </body>
 </html>
